bug fixes related to z-index

--- a/customer/src/css/cssFile.css
+++ b/customer/src/css/cssFile.css
@@ -110,7 +110,7 @@ body {
   align-items: center;
   position: fixed;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
   text-shadow: 1px 1px black;
   overflow: hidden;
   -webkit-animation-name: bounceInLeft;
@@ -122,6 +122,7 @@ body {
   text-decoration: none;
   color: white;
   letter-spacing: 0;
+  z-index: 1;
 }
 
 .NavBarElement {
@@ -238,15 +239,11 @@ body {
 
 .ScrollImage {
   border-radius: 10%;
-  filter: gray; /* IE5+ */
-  -webkit-filter: grayscale(1); /* Webkit Nightlies & Chrome Canary */
   -webkit-transition: all .8s ease-in-out;
   margin-right: 20px;
 }
 
 .ScrollImage:hover {
-  filter: none;
-  -webkit-filter: grayscale(0);
   -webkit-transform: scale(1.01);
 }
 
@@ -325,14 +322,14 @@ body {
   width: 200px;
   border-radius: 10%;
   padding: 0;
-  filter: gray; /* IE5+ */
-  -webkit-filter: grayscale(1); /* Webkit Nightlies & Chrome Canary */
+  /*filter: gray;*/ /* IE5+ */
+  /*-webkit-filter: grayscale(1);*/ /* Webkit Nightlies & Chrome Canary */
   -webkit-transition: all .8s ease-in-out;
 }
 
 .MenuItem > img:hover {
-  filter: none;
-  -webkit-filter: grayscale(0);
+  /*filter: none;*/
+  /*-webkit-filter: grayscale(0);*/
   -webkit-transform: scale(1.01);
 }
 
@@ -480,10 +477,17 @@ body {
 
 .DealsContainerOutter { 
   color: white;
-  margin-top: 200px;
 }
 
 .DealsCarousel {}
+
+.carousel-caption {
+  z-index: 1;
+}
+
+.carousel-indicators {
+  z-index: 1;
+}
 
 .DealsContainerInner { 
   display: flex;
@@ -569,14 +573,10 @@ body {
   width: 200px;
   border-radius: 10%;
   padding: 0;
-  filter: gray; /* IE5+ */
-  -webkit-filter: grayscale(1); /* Webkit Nightlies & Chrome Canary */
   -webkit-transition: all .8s ease-in-out;
 }
 
 .DealItem > img:hover {
-  filter: none;
-  -webkit-filter: grayscale(0);
   -webkit-transform: scale(1.01);
 }
 
@@ -753,7 +753,7 @@ body {
   color: white;
   text-align: left;
   width: 50%;
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: rgba(0, 0, 0, 0);
   border-radius: 10px;
 }
 
@@ -781,7 +781,7 @@ body {
   color: white;
   text-align: left;
   width: 50%;
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: rgba(0, 0, 0, 0);
   border-radius: 10px;
 }
 
